# GENAI

./: .gitignore  README.md  Rag_from_scratch.ipynb  we.xlsx
Agents/GithubIssueAssistant/: main.py  pyproject.toml
Fine_tune/: SFT.ipynb  SFT1.ipynb
LSTM/: README.md
LSTM/NextWordPredictor/: Next_word_predictor_model_code.ipynb  README.md  app.py  pyproject.toml  requirements.txt  tokenizer.pickle
RAG_FROM_SCRATCH/: MultiModal_RAG_ColPali_Qwen2_vl_quantized_INT8.ipynb  Rag_from_scratch.ipynb  multimodal.ipynb
RNN_With_IMDB/: README.md  SImple_RNN_IMDB.ipynb  main.py  predication.py  pyproject.toml  requirements.txt
